Added UpdteDailyDAta2